--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-allauth==0.50.0
 django-cloudinary-storage==0.3.0
 django-filter==21.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
 oauthlib==3.2.0
 Pillow==9.1.0
 PyJWT==2.4.0
