--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-cloudinary-storage==0.3.0
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
+gunicorn==20.1.0
 oauthlib==3.2.0
 Pillow==9.1.0
 psycopg2==2.9.3
