--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-rest-auth==2.2.4
 Django==3.2.13
 django-allauth==0.50.0
 django-cloudinary-storage==0.3.0
+django-cors-headers==3.12.0
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
